--- a/templates/params.html
+++ b/templates/params.html
@@ -6,8 +6,8 @@
 		<h2>Credentials</h2>
 		<p>Enter your credential informations to configure CoWaBoo's API calls</p>
 		<form>
-			<div class="form-group" style="display:none;">
-				<h3 class="pointer" ng-click="paramDiigoShow = !paramDiigoShow"><open-icon open="{{paramDiigoShow}}"></open-icon> Diigo</h3>
+			<div class="form-group">
+				<h3 class="pointer" ng-click="paramDiigoShow = !paramDiigoShow"><open-icon open="{{paramDiigoShow}}"></open-icon> Diigo (not editable right now)</h3>
 				<div ng-hide="!paramDiigoShow" class="animated animateFadeInDown">
 					<div class="form-group">
 						<label for="diigoUsername">Diigo username</label>
