--- a/templates/params.html
+++ b/templates/params.html
@@ -7,16 +7,16 @@
 		<p>Enter your credential informations to configure CoWaBoo's API calls</p>
 		<form>
 			<div class="form-group">
-				<h3 class="pointer" ng-click="paramDiigoShow = !paramDiigoShow"><open-icon open="{{paramDiigoShow}}"></open-icon> Diigo (not editable right now)</h3>
+				<h3 class="pointer" ng-click="paramDiigoShow = !paramDiigoShow"><open-icon open="{{paramDiigoShow}}"></open-icon> Diigo</h3>
 				<div ng-hide="!paramDiigoShow" class="animated animateFadeInDown">
 					<div class="form-group">
 						<label for="diigoUsername">Diigo username</label>
-						<input type="text" class="form-control" id="diigoUsername" placeholder="" ng-model="params.diigoUsername" readonly>
+						<input type="text" class="form-control" id="diigoUsername" placeholder="" ng-model="params.diigoUsername">
 						<p>the username of whose diigo library you want to access</p>
 					</div>
 					<div class="form-group">
 						<label for="diigoPwd">Diigo password</label>
-						<input type="password" class="form-control" id="diigoPwd" placeholder="" ng-model="params.diigoPwd" readonly>
+						<input type="password" class="form-control" id="diigoPwd" placeholder="" ng-model="params.diigoPwd">
 						<p>The password of the user (it won't be saved, but only used in order to generate the <a href="http://en.wikipedia.org/wiki/Basic_access_authentication" target="_blank">basic authentication key</a> that is <a href="https://www.diigo.com/api_dev#section-key" target="_blank">asked by Diigo to connect to the api</a>)</p>
 					</div>
 					<div class="form-group">
