--- a/templates/usage.tags.html
+++ b/templates/usage.tags.html
@@ -1,9 +1,25 @@
-<h3>Getting tag related information<img src="assets/ajax-loader.gif" ng-show="app.loading" /></h3>
 <div class="row">
-	<div class="col-md-23">
+	<div class="col-md-12">
+		<h3>Service selection<img src="assets/ajax-loader.gif" ng-show="app.loading" /></h3>
+		<p>Select services from which you want to get your tags</p>
+		<div class="checkbox" ng-repeat="($value, service) in app.serviceList">
+			<label>
+				<input type="checkbox" ng-model="app.filters.services[$index]" ng-true-value="'{{$value}}'" ng-false-value="false" checked="checked">{{service}}
+			</label>
+		</div>
+		<p>Select services from which you want to get your tag related information</p>
+		<div class="checkbox" ng-repeat="($value, service) in app.tagServiceList">
+			<label>
+				<input type="checkbox" ng-model="app.filters.tagServices[$index]" ng-true-value="'{{$value}}'" ng-false-value="false" checked ng-checked='true'>{{service}}
+			</label>
+		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-12">
+		<h3>Getting tag related information<img src="assets/ajax-loader.gif" ng-show="app.loading" /></h3>
 		<div class="form-group">
 			<label for="tagInput">Select the Tag you want to study</label>
-			
 			<button type="button" class="btn btn-primary" ng-click="app.retrieveTags()"><span ng-if="!app.tags.length">Retrieve all</span><span ng-if="app.tags.length">Refresh</span> tags</button>
 			<span ng-click="app.replaceTagInInput(tag.title)" class="tag label label-success pointer" ng-repeat="tag in app.tags">{{tag.title}}</span>
 			<hr>
