--- a/templates/tabs.html
+++ b/templates/tabs.html
@@ -1,5 +1,7 @@
 <ul class="nav nav-tabs">
 	<li role="presentation" ng-class="{'active': (tabs.activeTab == 'search')}"><a href="#/usage/search">Getting bookmarks</a></li>
-	<li role="presentation" ng-class="{'active': (tabs.activeTab == 'tags')}"><a href="#/usage/tags">Tags related informations</a></li>
+	<li role="presentation" ng-class="{'active': (tabs.activeTab == 'tags')}"><a href="#/usage/tags">Tag related informations</a></li>
+	<li role="presentation" ng-class="{'active': (tabs.activeTab == 'groups')}"><a href="#/usage/groups">Tag related groups</a></li>
+	<li role="presentation" ng-class="{'active': (tabs.activeTab == 'users')}"><a href="#/usage/users">Tag related users</a></li>
 	<li role="presentation" ng-class="{'active': (tabs.activeTab == 'save')}"><a href="#/usage/save">Saving bookmarks</a></li>
 </ul>
