--- a/templates/usage.save.html
+++ b/templates/usage.save.html
@@ -2,7 +2,7 @@
 <p>Select services to which you want to save your bookmark</p>
 <div class="checkbox" ng-repeat="($value, service) in app.serviceList">
 	<label>
-		<input type="checkbox" ng-model="app.filters.services[$index]" ng-true-value="'{{$value}}'" ng-false-value="false" aria-label="service" checked ng-checked='true'>{{service}}
+		<input type="checkbox" ng-model="app.filters.services[$index]" ng-true-value="'{{$value}}'" ng-false-value="false" aria-label="service" checked ng-checked='app.filters.services[$index]'>{{service}}
 	</label>
 </div>
 
